--- a/server-noise/package.json
+++ b/server-noise/package.json
@@ -15,6 +15,7 @@
     "clean": "gatsby clean"
   },
   "dependencies": {
+    "@editorjs/editorjs": "^2.23.2",
     "autoprefixer": "^10.4.2",
     "gatsby": "^4.7.1",
     "gatsby-plugin-image": "^2.7.0",
@@ -32,6 +33,9 @@
     "tailwindcss": "^3.0.22"
   },
   "devDependencies": {
+    "@editorjs/raw": "^2.3.0",
+    "editorjs-drag-drop": "^1.0.3",
+    "editorjs-style": "^3.0.2",
     "prettier": "^2.5.1"
   }
 }
